@@ -32,9 +32,9 @@ LIB_FSLIB = vfatlib
 
 # User mode libraries
 # advapi32 crtdll fmifs gdi32 kernel32 libpcap packet msafd msvcrt ntdll ole32
-# oleaut32 psapi rpcrt4 secur32 shell32 user32 version ws2help ws2_32 wsock32 wshirda
+# oleaut32 epsapi psapi rpcrt4 secur32 shell32 user32 version ws2help ws2_32 wsock32 wshirda
 DLLS = advapi32 crtdll fmifs freetype gdi32 kernel32 packet msafd msvcrt ntdll \
-       secur32 user32 version winedbgc ws2help ws2_32 wshirda zlib epsapi #winmm
+       epsapi psapi secur32 user32 version winedbgc ws2help ws2_32 wsock32 wshirda zlib #winmm
 
 SUBSYS = smss win32k csrss ntvdm
 
